# api_placebo

./: .env.default  .pre-commit-config.yaml  README.md  pyproject.toml  swagger.yaml
api/config/: settings.py
src/api/: admin.py  models.py  serializers.py  urls.py  views.py
src/api/migrations/: 0001_initial.py
src/config/: settings.py  urls.py
src/templates/swaggerui/: swaggerui.html
