[tool.poetry]
name = "api_placebo"
version = "0.1.0"
description = ""
authors = ["Kseniia Protsenko"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
pre-commit = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[flake8]
line-length = 99

[tool.djlint]
ignore="D018,H006"
